service User {
  rpc Create (UserDTO) returns (User) {}
}

message UserDTO {
  string name = 1;
  string avatar_url = 2;
}

message User {
  string id = 1;
  string name = 2;
  string avatar_url = 3;
}
